--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Creative.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Creative.cshtml
@@ -51,7 +51,10 @@
                         CTR: { type: 'number' },
                         Conversions: { type: 'number' },
                         ConvRate: { type: 'number' },
-                        Spend: { type: 'number' }
+                        Spend: { type: 'number' },
+                        CPM: { type: 'number' },
+                        CPC: { type: 'number' },
+                        CPA: { type: 'number' }
                     }
                 }
             },
@@ -59,8 +62,13 @@
             aggregate: [
                 { field: "Impressions", aggregate: "sum" },
                 { field: "Clicks", aggregate: "sum" },
+                { field: "CTR", aggregate: "agg" },
                 { field: "Conversions", aggregate: "sum" },
-                { field: "Spend", aggregate: "sum" }
+                { field: "ConvRate", aggregate: "agg" },
+                { field: "Spend", aggregate: "sum" },
+                { field: "CPM", aggregate: "agg" },
+                { field: "CPC", aggregate: "agg" },
+                { field: "CPA", aggregate: "agg" }
             ]
             //requestEnd: function (e) {... // for date field
         });
@@ -82,13 +90,18 @@
                 { field: 'CreativeName', title: 'Creative' },
                 { field: 'Impressions', width: 100, attributes: { style: "text-align:right" }, format: '{0:n0}', footerTemplate: "#= kendo.toString(sum, 'n0') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },
                 { field: 'Clicks',      width: 100, attributes: { style: "text-align:right" }, format: '{0:n0}', footerTemplate: "#= kendo.toString(sum, 'n0') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },
-                { field: 'CTR',         width: 100, attributes: { style: "text-align:right" }, format: '{0:p}' },
+                { field: 'CTR',         width: 100, attributes: { style: "text-align:right" }, format: '{0:p}',  footerTemplate: "#= kendo.toString(agg, 'p') #",  footerAttributes: { style: "font-weight: bold; text-align: right" } },
             @if (Model.ShouldShowMetric("Conversions"))
             {
                 <text>{ field: 'Conversions', width: 100, attributes: { style: "text-align:right" }, format: '{0:n0}', footerTemplate: "#= kendo.toString(sum, 'n0') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },</text>
-                <text>{ field: 'ConvRate',    width: 100, attributes: { style: "text-align:right" }, format: '{0:p}' },</text>
+                <text>{ field: 'ConvRate',    width: 100, attributes: { style: "text-align:right" }, format: '{0:p}',  footerTemplate: "#= kendo.toString(agg, 'p') #",  footerAttributes: { style: "font-weight: bold; text-align: right" } },</text>
             }
-                { field: 'Spend',       width: 100, attributes: { style: "text-align:right" }, format: '{0:c}',  footerTemplate: "#= kendo.toString(sum, 'c') #",  footerAttributes: { style: "font-weight: bold; text-align: right" } }
+                { field: 'Spend', width: 100, attributes: { style: "text-align:right" }, format: '{0:c}', footerTemplate: "#= kendo.toString(sum, 'c') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },
+                { field: 'CPM', title: 'eCPM', width: 100, attributes: { style: "text-align:right" }, format: '{0:c}', footerTemplate: "#= kendo.toString(agg, 'c') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },
+            @if (Model.ShouldShowMetric("Conversions"))
+            {
+                <text>{ field: 'CPA', title: 'eCPA', width: 100, attributes: { style: "text-align:right" }, format: '{0:c}', footerTemplate: "#= kendo.toString(agg, 'c') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },</text>
+            }
             ],
             filterable: false,
             sortable: true,
