--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
@@ -142,7 +142,8 @@
         function WindowResize() {
             ResizeChart('sample', true);
             ResizeChart('summary', true);
-            ResizeChart('creative', true);
+            ResizeChart('creativeBar', true);
+            ResizeChart('creativeScatter', true);
         }
 
         // Resize a chart, optionally refreshing it.
