--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/CreateUserProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/CreateUserProfile.cshtml
@@ -6,7 +6,7 @@
 
 @using (Ajax.BeginForm(ajaxOpts_Post))
 {
-    @Html.ValidationSummary(true)
+    @Html.ValidationSummary()
     <fieldset>
         <legend>Create UserProfile</legend>
         <table>
