Summary-legend, Creative-cols

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClientPortal.Web.Areas.TD.Models.TDHomeModel
+﻿@* @model ClientPortal.Web.Areas.TD.Models.TDHomeModel *@
 
 @*<!--+---------+
       | Top Bar |
