--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Creative.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Creative.cshtml
@@ -175,7 +175,7 @@
             }
                 { field: 'Spend',              width: 100, attributes: { style: "text-align:right" }, format: '{0:c}', footerTemplate: "#= kendo.toString(sum, 'c') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },
                 { field: 'CPM', title: 'eCPM', width:  70, attributes: { style: "text-align:right" }, format: '{0:c}', footerTemplate: "#= kendo.toString(agg, 'c') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },
-                //{ field: 'CPC', title: 'eCPC', width:  70, attributes: { style: "text-align:right" }, format: '{0:c}', footerTemplate: "#= kendo.toString(agg, 'c') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },
+                { field: 'CPC', title: 'eCPC', width:  70, attributes: { style: "text-align:right" }, format: '{0:c}', footerTemplate: "#= kendo.toString(agg, 'c') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },
             @if (Model.ShouldShowMetric("Conversions"))
             {
                 <text>{ field: 'CPA', title: 'eCPA', template: "# if(Conv==0){# N/A #}else{##= kendo.toString(CPA,'c') ##}#", width: 80, attributes: { style: "text-align:right" }, footerTemplate: "#= kendo.toString(agg, 'c') #", footerAttributes: { style: "font-weight: bold; text-align: right" } },</text>
