Aff Amounts - sortable

--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -12,7 +12,7 @@ Accounting Period:
 @Html.ActionLink("Advertisers", "Index", "Advertisers")<br />
 @Html.ActionLink("Affiliates", "Index", "Affiliates")<br />
 <br />
-@Html.ActionLink("Affiliate Amounts", "AffiliateCampaigns", "Workflow")<br />
+@Html.ActionLink("Affiliate Amounts", "AffiliateAmounts", "Workflow")<br />
 @Html.ActionLink("Margin Approvals", "MarginApprovals", "Admin")<br />
 @Html.ActionLink("Media Buyer Approvals", "Summary", "Payouts")<br />
 @Html.ActionLink("Invoice Requests", "Summary", "Invoices")<br />
