--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/CreateUserProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/CreateUserProfile.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClientPortal.Data.Entities.TD.DBM.InsertionOrder
+﻿@model ClientPortal.Data.Entities.TD.TradingDeskAccount
 @{
     var ajaxOptions = RazorHelpers.GetAjaxOptions("tdAccountsTab");
     var ajaxOpts_Post = RazorHelpers.GetAjaxOptions("tdAccountsTab", null, "Post");
@@ -11,8 +11,8 @@
         <legend>Create UserProfile</legend>
         <table>
             <tr>
-                <td>@Html.LabelFor(m => m.InsertionOrderName, "Insertion Order:")</td>
-                <td>@Html.DisplayFor(m => m.InsertionOrderName)</td>
+                <td>@Html.LabelFor(m => m.TradingDeskAccountId)</td>
+                <td>@Html.DisplayFor(m => m.TradingDeskAccountId)</td>
             </tr>
             <tr>
                 <td>UserName</td>
@@ -25,7 +25,7 @@
         </table>
         <br />
         <input type="submit" value="Save" />
-            &nbsp;@Ajax.ActionLink("cancel", "InsertionOrders", ajaxOptions)
+            &nbsp;@Ajax.ActionLink("cancel", "TradingDeskAccounts", ajaxOptions)
     </fieldset>
 }
 
