--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/TradingDeskAccounts.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/TDAdmin/TradingDeskAccounts.cshtml
@@ -33,8 +33,8 @@ Show:
         <td>
             @if (tda.UserProfiles.Count() > 0) {
                 @(String.Join(", ", tda.UserProfiles.Select(u => u.UserName).ToArray()))
-            //} else {
-            //    @Ajax.ActionLink("create", "CreateUserProfile", new { tdaId = tda.TradingDeskAccountId }, ajaxOptions)
+            } else { // hide this?
+                @Ajax.ActionLink("create", "CreateUserProfile", new { tdaId = tda.TradingDeskAccountId }, ajaxOptions)
             }
         </td>
         <td>@(tda.ShowConversions ? "yes" : "no")</td>
