--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
@@ -3,6 +3,20 @@
     var metrics = Model.MetricsToGraph;
 }
 
+<div style="height: 35px">
+    <select style="width: 140px" id="summary_dateRangeSel" onchange="ChangeDateRange('summary', true)">@* show all in USD for now *@
+        <option value="mtd">Month to Date</option>
+        <option value="ytd">Year to Date</option>
+        <option value="lastmonth">Last Month</option>
+        <option value="custom">- custom -</option>
+    </select>
+    <span class="paddedlabel">Start:</span>
+    <input id="summary_startdate" name="startdate" type="text" value="@Model.StartDate" onchange="DateChanged('summary')" />
+    <span class="paddedlabel">End:</span>
+    <input id="summary_enddate" name="enddate" type="text" value="@Model.EndDate" onchange="DateChanged('summary')" />  @* show all in USD for now *@
+    <a class="button paddedbutton" id="summary_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('summary', true); return false">Filter</a>
+</div>
+
 <div id="summaryChartSection" class="k-content">
     <div class="chart-wrapper">
         <div id="summaryChart"></div>
@@ -66,6 +80,10 @@
 
 <script>
     $(document).ready(function () {
+        $('#summary_dateRangeSel').kendoDropDownList();
+        $('#summary_startdate').kendoDatePicker({ footer: ' ' });
+        $('#summary_enddate').kendoDatePicker({ footer: ' ' });
+
         var datasource = CreateSummaryDataSource();
         CreateSummaryChart(datasource);
         datasource.read();
@@ -101,13 +119,12 @@
                     type: 'post',
                     dataType: 'json',
                     url: '@Url.Action("SummaryData", "Reports")'
-                    //,data: function () {
-                    //    return {
-                    //        startdate: $('#daysum_startdate').val(),
-                    //        enddate: $('#daysum_enddate').val(),
-                    //        offerid: $('#daysum_offerFilter').val()
-                    //    };
-                    //}
+                    ,data: function () {
+                        return {
+                            startdate: $('#summary_startdate').val(),
+                            enddate: $('#summary_enddate').val(),
+                        };
+                    }
                 }
             },
             schema: {
@@ -126,7 +143,7 @@
                     }
                 }
             },
-            //sort: { field: "Date", dir: "asc" },
+            sort: { field: "Date", dir: "asc" },
             aggregate: [
                 { field: "Impressions", aggregate: "sum" },
                 { field: "Clicks", aggregate: "sum" },
